created basic event model, added superuser, created new event in admin

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,6 +19,7 @@
         <a href="/calendar" class="nav-link">Calendar</a>
         <a href="/events" class="nav-link">Events</a>
         <a href="#" class="nav-link">To Do List</a>
+        <a href="/admin/" class="nav-link">Admin</a>
     </nav>
     {% block content %}
 
