added basic styling to calendar - renders full page calendar and displays events

--- a/main_app/templates/calendar.html
+++ b/main_app/templates/calendar.html
@@ -4,5 +4,12 @@
 Planify | Home Page
 {% endblock %}
 {% block content %} 
+<div class="header-container">
+    <h1 class="header">My Calendar</h1>
+    <button class="btn">Add Event</button>
+    <p><a href="">Back to Profile</a> </p>
+</div>
+
+
 {{ calendar }}
 {% endblock %}
