created event detail view/url/template

--- a/main_app/templates/calendar.html
+++ b/main_app/templates/calendar.html
@@ -6,7 +6,7 @@ Planify | Home Page
 {% block content %} 
 <div class="header-container">
     <h1 class="header">My Calendar</h1>
-    <p><a href="">Back to Profile</a> </p>
+    <p><a href="{% url 'events' %}">Back to Profile</a> </p>
 </div>
 <div class="cal-container">
     
