--- a/main_app/templates/event_list.html
+++ b/main_app/templates/event_list.html
@@ -7,6 +7,7 @@ Planify | Event List
 <div class="header-container">
     <h1 class="header">My Events</h1>
     <p><a href="">Back to Profile</a> </p>
+    <a href="{% url 'event_create' %}"><button class="btn">Add Event</button></a>
 </div>
 
 <table>
