--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,9 +15,10 @@
 <body>
     <nav class="nav-bar" >
         <a href="/" class="nav-link">Home</a>
-        <a href="/about" class="nav-link">About</a>
-        <a href="/calendar" class="nav-link">Calendar</a>
-        <a href="/events" class="nav-link">Events</a>
+        <a href="/about/" class="nav-link">About</a>
+        <a href="/calendar/" class="nav-link">Calendar</a>
+        <a href="/events/" class="nav-link">Events</a>
+        <a href="/events/new/" class="nav-link">Add Event</a>
         <a href="#" class="nav-link">To Do List</a>
         <a href="/admin/" class="nav-link">Admin</a>
     </nav>
