added event delete functionality

--- a/main_app/templates/event_detail.html
+++ b/main_app/templates/event_detail.html
@@ -21,6 +21,7 @@ Planify | Event Details
     {% endif %}
     <div class="event-btns">
         <a href="{% url 'event_update' event.id%}"><button class="btn" >Edit</button></a>
+        <a href="{% url 'event_delete' event.id%}"><button class="btn" >Delete</button></a>
     </div>
 </div>
 
