--- a/main_app/templates/event_update.html
+++ b/main_app/templates/event_update.html
@@ -15,6 +15,7 @@ Planify | Edit Event
 
     <button class="btn" type="submit" >Update Task</button>
 </form>
+<a href="{% url 'event_delete' event.id %}"><button class="btn-delete" >Delete Instead</button></a>
 
 
 {% endblock %}
