--- a/main_app/templates/event_list.html
+++ b/main_app/templates/event_list.html
@@ -21,6 +21,7 @@ Planify | Event List
         <td><a class="event-list-title" href="{% url 'event_detail' event.id %}">{{ event.title }}</a></td>
         <td><a class="event-list-link" href="{% url 'event_detail' event.id %}">View</a></td>
         <td><a class="event-list-link" href="{% url 'event_update' event.id %}">Edit</a></td>
+        <td><a class="event-list-link" href="{% url 'event_delete' event.id %}">Delete</a></td>
 
 
     </tr>
