updated event model, reran migrations, and updated event details template

--- a/main_app/static/styles/styles.css
+++ b/main_app/static/styles/styles.css
@@ -10,9 +10,8 @@
 }
 
 .sub-header {
-    color: darkolivegreen;
+    color: darkseagreen;
     text-shadow: .5px .5px .5px black;
-    background-color: blanchedalmond;
 }
 
 
