updated calendar events view, to render events based on due_date, and not creation date, added additional styles = events have full crud and display on calendar

--- a/main_app/static/styles/styles.css
+++ b/main_app/static/styles/styles.css
@@ -17,6 +17,12 @@
 
 
 /* CALENDAR PAGE STYLING */
+.calendar-btns {
+    margin-bottom: 3.5vh;
+    margin-left: 2vw;
+}
+
+
 .calendar {
     width: 98%;
     margin: auto;
