--- a/main_app/templates/event_form.html
+++ b/main_app/templates/event_form.html
@@ -14,7 +14,7 @@ Planify | Add New Event
     {% csrf_token %}
     {{ form.as_p }}
 
-    <button class="btn" type="submit" >Add Task</button>
+    <button class="btn" type="submit" >Add Event</button>
 </form>
 
 
