--- a/main_app/templates/calendar.html
+++ b/main_app/templates/calendar.html
@@ -5,7 +5,7 @@ Planify | My Calendar
 {% endblock %}
 {% block content %} 
 <div class="header-container">
-    <h1 class="header">My Calendar</h1>
+    <h1 class="header">{{ user }}'s Calendar</h1>
     <p><a href="{% url 'events' %}">Back to Profile</a> </p>
 </div>
 <div class="cal-container">
