added register view class, url, and template - register works

--- a/main_app/templates/login.html
+++ b/main_app/templates/login.html
@@ -14,6 +14,6 @@ Planify | Login to Your Planify Account!
 
 </form>
 
-<p>Don't have an account? <a href="">Register Here</a></p>
+<p>Don't have an account? <a href="{% url 'register' %}">Register Here</a></p>
 
 {% endblock %}
