--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,11 +16,16 @@
     <nav class="nav-bar" >
         <a href="/" class="nav-link">Home</a>
         <a href="/about/" class="nav-link">About</a>
+        {% if request.user.is_authenticated %}
         <a href="/calendar/" class="nav-link">Calendar</a>
         <a href="/events/" class="nav-link">Events</a>
         <a href="/events/new/" class="nav-link">Add Event</a>
-        <a href="#" class="nav-link">To Do List</a>
         <a href="/admin/" class="nav-link">Admin</a>
+        <a href="{% url 'logout' %}" class="nav-link">Logout</a>
+        {% else %}
+        <a href="{% url 'login' %}" class="nav-link">Login</a>
+        <a href="{% url 'register' %}" class="nav-link">Register</a>
+        {% endif %}
     </nav>
     {% block content %}
 
