updated templates + styling, added collaborators model, and M:M association with Event model - made migrations

--- a/main_app/static/styles/styles.css
+++ b/main_app/static/styles/styles.css
@@ -3,6 +3,9 @@
 
 /* GENERAL STYLES */
 
+body {
+    background-color: slategrey;
+}
 
 .header {
     color: darkolivegreen;
@@ -39,7 +42,7 @@
 .calendar th {
     padding: 10px;
     text-align: center;
-    font-size: 18px;
+    font-size: 18px;  
 }
 
 .calendar td {
