--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,7 +16,7 @@
     <nav class="nav-bar" >
         <a href="/" class="nav-link">Home</a>
         <a href="/about/" class="nav-link">About</a>
-        {% if request.user.is_authenticated %}
+        {% if user.is_authenticated %}
         <a href="/calendar/" class="nav-link">Calendar</a>
         <a href="/events/" class="nav-link">Events</a>
         <a href="/events/new/" class="nav-link">Add Event</a>
