added urls, view classes, and templates for collaborators index & creation

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -20,6 +20,8 @@
         <a href="/calendar/" class="nav-link">Calendar</a>
         <a href="/events/" class="nav-link">Events</a>
         <a href="/events/new/" class="nav-link">Add Event</a>
+        <a href="/collaborators/" class="nav-link">Collaborators</a>
+        <a href="/collaborators/new/" class="nav-link">Add Collaborator</a>
         <a href="/admin/" class="nav-link">Admin</a>
         <a href="{% url 'logout' %}" class="nav-link">Logout</a>
         {% else %}
