--- a/main_app/templates/event_detail.html
+++ b/main_app/templates/event_detail.html
@@ -10,11 +10,20 @@ Planify | Event Details
     <p><a href="{% url 'events' %}">Back to Event List</a> </p>
     <p><a href="{% url 'calendar' %}">Back to Calendar View</a> </p>
 </div>
-
 <div class="event-container">
     <h4>{{ event.description }}</h4>
-    <p class="event-txt-item">Created at: {{event.created_at}}</p>
-    <p class="event-txt-item"><strong>Due Date: {{event.due_date}}</strong></p>
+    <h4>Collaborators:</h4>
+    {% for c in event.collaborators.all %}
+    <div class="collaborators">
+        <a href=""><h4 class="event-txt-item">{{ c.name }}</h4></a>
+        <span class="collaborator-info">{{ c.role }}</span>
+    </div>
+    {% empty %}
+        <div>You have no collaborators for this event.</div>
+    {% endfor %}
+    <hr/>
+    <p class="event-txt-item">Created at: {{ event.created_at }}</p>
+    <p class="event-txt-item"><strong>Due Date: {{ event.due_date }}</strong></p>
     {% if event.completed == True  %}
     <p class="event-txt-item" style="color: green;" ><strong>Status: Completed!</strong></p>
     {% else  %}
