--- a/main_app/templates/collaborators_index.html
+++ b/main_app/templates/collaborators_index.html
@@ -8,10 +8,10 @@ Planify | All Collaborators
     <h1 class="header">My Collaborators</h1>
     <p>Collaborators are members of your team, classmates, and friends. You can add Collaborators to your events or simply keep them in DB for quick access to contact information.</p>
     <a href="">Back to Profile</a>
-    <a href="{% url 'add_collaborator' %}"><button class="btn">Add New Collaborator</button></a>
+    <a href="{% url 'add_collaborator' %}"><button class="btn-add">Add Collaborator</button></a>
 </div>
 
-<table>
+<table style="margin-top: 2em;" >
     <tr>
         <th class="sub-header" style="font-size: larger;">Collaborators</th>
         <th class="sub-header" style="font-size: larger;">Role</th>
