--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -13,7 +13,8 @@
     </title>
 </head>
 <body>
-    <nav class="nav-bar" >
+    <nav class="nav-bar">
+        <a href="/" class="nav-logo"><h1 class="nav-logo">.planify</h1></a>
         <a href="/" class="nav-link">Home</a>
         <a href="/about/" class="nav-link">About</a>
         {% if user.is_authenticated %}
