--- a/main_app/templates/collaborator_detail.html
+++ b/main_app/templates/collaborator_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 
 {% block title %}
-Planify | Event Details
+Planify | Collaborator Details
 {% endblock %}
 {% block content %} 
 <div class="header-container">
