--- a/main_app/templates/collaborator_form.html
+++ b/main_app/templates/collaborator_form.html
@@ -14,7 +14,7 @@ Planify | Add New Collaborator
     {% csrf_token %}
     {{ form.as_table }}
 
-    <button class="btn" type="submit" >Add Collaborator</button>
+    <button class="btn-add" type="submit" >Add Collaborator</button>
 </form>
 
 
