created views, urls, & templates for task delete & update functionality

--- a/main_app/templates/task_detail.html
+++ b/main_app/templates/task_detail.html
@@ -14,8 +14,8 @@ Planify | Event Task Details
 <hr>
 <div class="detail-actions">
 <h4>Choose an Action</h4>
-    <a href="" class="action">Edit</a>
-    <a href="" class="action">Delete</a>
+    <a href="{% url 'task_update' task.id%}" class="action">Edit</a>
+    <a href="{% url 'task_delete' task.id%}" class="action">Delete</a>
 </div>
 
 {% endblock %}
