--- a/main_app/templates/login.html
+++ b/main_app/templates/login.html
@@ -4,6 +4,7 @@
 Planify | Login to Your Planify Account!
 {% endblock %}
 {% block content %}  
+<div class="login-page">
 <h1 class="header">Login to Planify!</h1>
 
 <form action="" method="post">
@@ -15,5 +16,5 @@ Planify | Login to Your Planify Account!
 </form>
 
 <p>Don't have an account? <a href="{% url 'register' %}">Register Here</a></p>
-
+</div>
 {% endblock %}
