--- a/main_app/templates/register.html
+++ b/main_app/templates/register.html
@@ -3,7 +3,8 @@
 {% block title %}
 Planify | Register for a Planify Account!
 {% endblock %}
-{% block content %}  
+{% block content %} 
+<div class="reg-page">
 <h1 class="header">Signup for Planify!</h1>
 
 <form action="" method="post">
@@ -16,4 +17,5 @@ Planify | Register for a Planify Account!
 
 <p>Already have an account? <a href="{% url 'login' %}">Login Here</a></p>
 
+</div> 
 {% endblock %}
