--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -19,6 +19,14 @@
         <a href="/" class="nav-link">Home</a>
         <a href="/about/" class="nav-link">About</a>
         {% if user.is_authenticated %}
+        <div class="dropdown">
+            <a href="{% url 'profile' user.id%}" class="drop-link">Profile
+                <i class="fa fa-caret-down"></i> 
+            </a>
+            <div class="drop-content">
+                <a href="/edit_profile/" id="drop-item" class="nav-link">Edit Profile</a>
+            </div>
+        </div>
         <a href="/calendar/" class="nav-link">Calendar</a>
         <div class="dropdown">
             <a href="/events/" class="drop-link">Events
@@ -34,14 +42,6 @@
             </a>
             <div class="drop-content">
                 <a href="/collaborators/new/" id="drop-item" class="nav-link">Add Collaborator</a>
-            </div>
-        </div>
-        <div class="dropdown">
-            <a href="/profile/" class="drop-link">Profile
-                <i class="fa fa-caret-down"></i> 
-            </a>
-            <div class="drop-content">
-                <a href="/edit_profile/" id="drop-item" class="nav-link">Edit Profile</a>
             </div>
         </div>
         <a href="/admin/" class="nav-link">Admin</a>
