--- a/main_app/templates/edit_account.html
+++ b/main_app/templates/edit_account.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %} 
 
 {% block title %}
-Planify | Edit Profile
+Planify | Edit Account Info
 {% endblock %}
 {% block content %} 
 <div class="reg-page">
-<h1 class="header">Edit Your Profile!</h1>
+<h1 class="header">Edit Account!</h1>
 
 
-<form action="" method="post" enctype="multipart/form-data">
+<form action="" method="post">
     {% csrf_token %}
-    {{ form.media }}
+    
     {{form.as_p}}
 
     <button class="btn-one" type="submit">Update</button>
